# tesi

./: bibliografia.bib  tesi.tex
Circuiti/: adder.sch  adder_test.sch  binary_counter.sch  binary_counter_test.sch  confronto corrente.sch  flipflop_demos.sch  latch_demos.sch  latch_demos_test.sch  latch_demos_test2.sch  logic-gates.sch  nmos-caratteristica.sch  plot.xpm  porta-and-or.sch  porta-nand.sch  porta-nor.sch  porta-not-caratteristica.sch  porta-not-ritardi.sch  porta-not.sch  pulse.sch  sr_latch.sch  transitorio_carica.sch  untitled.sch
Circuiti/adders/: 4bit_adder.sch  4bit_adder.sym  full_adder.sym  half_adder.sch  half_adder.sym
Circuiti/counter/: cell.sch  cell.sym  counter.sch  counter.sym  test.sch
Circuiti/graph_info/: 4bit-adder-sim.gp  4bit-adder-sim.txt  and-or-dinamica.gp  and-or-dinamica.txt  caratt_statica.gp  caratt_statica.txt  count-mult.gp  count-mult.txt  count-single.gp  count-single.txt  counter-improved.gp  counter-improved.txt  edge-detector-sim.gp  edge-detector-sim.txt  half-adder-sim.gp  half-adder-sim.txt  jkff-ms-sim.gp  jkff-ms-sim.txt  jkff-sim.gp  jkff-sim.txt  mult-sim.gp  mult-sim.txt  n_moss_caratt.gp  n_moss_caratt.txt  nand-dinamica.gp  nand-dinamica.txt  nor-dinamica-corr.gp  nor-dinamica-corr.txt  not_caratt.gp  (+21 more)
Gnuplotter/: .gitignore  CMakeLists.txt  main.cpp  sim_1.gp
Gnuplotter/include/: draft.h  logger.h  menu.h
Gnuplotter/src/: draft.cpp  menu.cpp
Parti/: circuiti logici.tex  introduzione.tex  parametri simulazione.tex  transistor.tex
Relazione/: bibliografia.bib  commands.tex  customization.tex  tesi.tex
(+135 files in other folders)
